[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Wallpoet-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ball.png" type="Texture" id=3]
[ext_resource path="res://assets/paddle.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Wallpoet-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 220.0

[node name="GridContainer" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 280.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
editor/display_folded = true
margin_right = 174.0
margin_bottom = 182.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/GridContainer/VBoxContainer"]
margin_right = 174.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Breakout"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/GridContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 174.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="StartGame" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 122.0
margin_bottom = 71.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Start Game"
flat = true
align = 0

[node name="Quit" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 174.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
flat = true
align = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
editor/display_folded = true
margin_left = 178.0
margin_right = 280.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/GridContainer/VBoxContainer2"]
margin_right = 102.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ball" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer2/CenterContainer2"]
margin_left = 47.0
margin_top = 40.0
margin_right = 55.0
margin_bottom = 48.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/GridContainer/VBoxContainer2"]
margin_top = 93.0
margin_right = 102.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Paddle" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer2/CenterContainer"]
margin_left = 35.0
margin_top = 40.0
margin_right = 67.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="HighScore" type="Label" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 280.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 5 )
text = "High Score:"
align = 1
[connection signal="button_down" from="VBoxContainer/GridContainer/VBoxContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_button_down"]
[connection signal="button_down" from="VBoxContainer/GridContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
